@@ -27,6 +27,7 @@
 #include "DomainApplicationManager/DomainApplicationManager_Export.h"
 #include "tao/Valuetype/ValueBase.h"
 #include "tao/Valuetype/Valuetype_Adapter_Impl.h"
+#include "ace/SString.h"
 
 namespace CIAO
 {
