@@ -1,9 +1,15 @@
 Sun Jan 30 20:30:46 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
+	* DAnCE/DomainApplicationManager/Deployment_Configuration.h:
+	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
+	* DAnCE/ExecutionManager/ExecutionManager_Impl.h:
 	* DAnCE/NodeApplicationManager/ImplementationInfo.cpp:
 	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
 	* DAnCE/ciao/Container_Base.cpp:
 	* DAnCE/ciao/NodeApplication_Impl.cpp:
+	* ciao/Container_Base.cpp:
+	* ciao/ServerActivator_Impl.h:
+	* examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.cpp:
 
 	  Added missing header include directives that are necessary due
 	  to inter-header dependency reductions in ACE.
